# tilegrab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
Core/: Downloader.py  GeoDataset.py  Moasic.py  TileSource.py  Tiles.py  __init__.py
src/tilegrab/: __init__.py  cli.py  dataset.py  downloader.py  images.py  logs.py  mosaic.py  progres.py  sources.py  tiles.py
src/tilegrab/downloader/: __init__.py  config.py  progress.py  result.py  runner.py  session.py  status.py  worker.py
src/tilegrab/images/: __init__.py  collection.py  exporter.py  formats.py  grouping.py  image.py  loader.py  mosaic.py
src/tilegrab/sources/: __init__.py  base.py  public.py  restricted.py
src/tilegrab/tiles/: __init__.py  collection.py  selectors.py  tile.py
tests/: test_dataset.py  test_downloader.py  test_mosaic.py  test_sources.py  test_tiles.py
tests/data/: T.geojson
tests/utils/: attr_utils.py
tilegrab/: __init__.py  cli.py  downloader.py  mosaic.py  sources.py  tiles.py
