[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77",
    "setuptools-scm[toml]>=6.2.3",
]

[project]
name = "tilegrab"
version = "1.2.0b2"
description = "Fast geospatial map tile downloader and mosaicker"
readme = "README.md"
authors = [
    {name = "Thiwanka Munasinghe"}
]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "tilegrab",
    "Tilegrab",
    "TileGrab",
    "tileGrab",
]

dependencies = [
    "requests",
    "rasterio",
    "pillow",
    "tqdm",
    "python-box",
    "geopandas",
    "pyproj",
    "shapely"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "setuptools",
    "mock",
    "tox"
]

[project.scripts]
tilegrab = "tilegrab.cli:main"

[project.urls]
Changelog = "https://github.com/thiwaK/tilegrab"
Contact = "https://github.com/thiwaK"
Homepage = "https://github.com/thiwaK/tilegrab"
Source = "https://github.com/thiwaK/tilegrab"
Tracker = "https://github.com/thiwaK/tilegrab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = [ "py310", "py311", "py312", "py313" ]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true